--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,6 +18,11 @@
   url = "#experience"
   weight = 30
 
+[[main]]
+  name = "Selected Coursework"
+  url = "#accomplishments"
+  weight = 50
+
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 # [[main]]
